--- a/feedforward_nn.ipynb
+++ b/feedforward_nn.ipynb
@@ -1,90 +1,159 @@
-# 导入必要的库
-import numpy as np
-import matplotlib.pyplot as plt
-
-# 定义激活函数及其导数
-def sigmoid(x):
-    return 1 / (1 + np.exp(-x))
-
-def sigmoid_derivative(x):
-    return x * (1 - x)
-
-# 构建前馈神经网络
-class FeedforwardNeuralNetwork:
-    def __init__(self, input_size, hidden_size, output_size):
-        self.input_size = input_size
-        self.hidden_size = hidden_size
-        self.output_size = output_size
-        # 随机初始化权重
-        self.W1 = np.random.rand(self.hidden_size, self.input_size)
-        self.b1 = np.zeros((self.hidden_size, 1))
-        self.W2 = np.random.rand(self.output_size, self.hidden_size)
-        self.b2 = np.zeros((self.output_size, 1))
-
-    def forward_propagation(self, X):
-        # 隐藏层计算
-        self.z1 = np.dot(self.W1, X) + self.b1
-        self.a1 = sigmoid(self.z1)
-        # 输出层计算
-        self.z2 = np.dot(self.W2, self.a1) + self.b2
-        self.a2 = sigmoid(self.z2)
-        return self.a2
-
-    def backpropagation(self, X, y, learning_rate):
-        m = X.shape[1]
-        # 计算输出层误差
-        dZ2 = self.a2 - y
-        dW2 = np.dot(dZ2, self.a1.T) / m
-        db2 = np.sum(dZ2, axis=1, keepdims=True) / m
-        # 计算隐藏层误差
-        dZ1 = np.dot(self.W2.T, dZ2) * sigmoid_derivative(self.a1)
-        dW1 = np.dot(dZ1, X.T) / m
-        db1 = np.sum(dZ1, axis=1, keepdims=True) / m
-        # 更新权重和偏置
-        self.W1 -= learning_rate * dW1
-        self.b1 -= learning_rate * db1
-        self.W2 -= learning_rate * dW2
-        self.b2 -= learning_rate * db2
-
-    def train(self, X, y, epochs, learning_rate):
-        losses = []
-        for epoch in range(epochs):
-            # 前馈传播
-            output = self.forward_propagation(X)
-            # 计算损失（交叉熵损失）
-            loss = -np.sum(y * np.log(output) + (1 - y) * np.log(1 - output)) / X.shape[1]
-            losses.append(loss)
-            # 反向传播更新参数
-            self.backpropagation(X, y, learning_rate)
-            if (epoch + 1) % 100 == 0:
-                print(f'Epoch {epoch + 1}: Loss = {loss}')
-        return losses
-
-    def predict(self, X):
-        return self.forward_propagation(X)
-
-
-# 示例使用
-input_size = 2
-hidden_size = 3
-output_size = 1
-X = np.array([[0, 0], [0, 1], [1, 0], [1, 1]]).T
-y = np.array([[0], [1], [1], [0]]).T
-
-# 创建神经网络实例
-nn = FeedforwardNeuralNetwork(input_size, hidden_size, output_size)
-# 训练模型
-epochs = 1000
-learning_rate = 0.1
-losses = nn.train(X, y, epochs, learning_rate)
-
-# 绘制损失曲线
-plt.plot(range(epochs), losses)
-plt.xlabel('Epochs')
-plt.ylabel('Loss')
-plt.title('Training Loss')
-plt.show()
-
-# 进行预测
-predictions = nn.predict(X)
-print("Predictions:", predictions)
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tensorflow2.0 小练习"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 实现softmax函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(x):\n",
+    "    ##########\n",
+    "    '''实现softmax函数，只要求对最后一维归一化，\n",
+    "    不允许用tf自带的softmax函数'''\n",
+    "    ##########\n",
+    "    return prob_x\n",
+    "\n",
+    "test_data = np.random.normal(size=[10, 5])\n",
+    "(softmax(test_data).numpy() - tf.nn.softmax(test_data, axis=-1).numpy())**2 <0.0001"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 实现sigmoid函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sigmoid(x):\n",
+    "    ##########\n",
+    "    '''实现sigmoid函数， 不允许用tf自带的sigmoid函数'''\n",
+    "    ##########\n",
+    "    return prob_x\n",
+    "\n",
+    "test_data = np.random.normal(size=[10, 5])\n",
+    "(sigmoid(test_data).numpy() - tf.nn.sigmoid(test_data).numpy())**2 < 0.0001"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 实现 softmax 交叉熵loss函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax_ce(x, label):\n",
+    "    ##########\n",
+    "    '''实现 softmax 交叉熵loss函数， 不允许用tf自带的softmax_cross_entropy函数'''\n",
+    "    ##########\n",
+    "    return loss\n",
+    "\n",
+    "test_data = np.random.normal(size=[10, 5])\n",
+    "prob = tf.nn.softmax(test_data)\n",
+    "label = np.zeros_like(test_data)\n",
+    "label[np.arange(10), np.random.randint(0, 5, size=10)]=1.\n",
+    "\n",
+    "((tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(label, test_data))\n",
+    "  - softmax_ce(prob, label))**2 < 0.0001).numpy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 实现 sigmoid 交叉熵loss函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 1. 1. 0. 1. 1. 1. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sigmoid_ce(x, label):\n",
+    "    ##########\n",
+    "    '''实现 softmax 交叉熵loss函数， 不允许用tf自带的softmax_cross_entropy函数'''\n",
+    "    ##########\n",
+    "    return loss\n",
+    "\n",
+    "test_data = np.random.normal(size=[10])\n",
+    "prob = tf.nn.sigmoid(test_data)\n",
+    "label = np.random.randint(0, 2, 10).astype(test_data.dtype)\n",
+    "print (label)\n",
+    "\n",
+    "((tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(label, test_data))- sigmoid_ce(prob, label))**2 < 0.0001).numpy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
